[2025-1029]  simple effect, lightline 변경, 추가

--- a/styleGuide/lnb.html
+++ b/styleGuide/lnb.html
@@ -150,7 +150,7 @@ $(document).ready(function(){
 		<li class="mn_2depth">
 			<h2 class="nav_h2"><span>css3</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">
-				<li><a href="/TRpackage/styleGuide/demo/css3/shadow/default.html?dep1=9&dep2=0"			>shadow</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3/simple_effect/default.html?dep1=9&dep2=0"			>simple effect</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/css3/shape/default.html?dep1=9&dep2=1"			>shape</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/css3/slash/default.html?dep1=9&dep2=2"			>slash</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/css3/motion/default.html?dep1=9&dep2=3"			>motion</a></li>
@@ -168,6 +168,7 @@ $(document).ready(function(){
 				<li><a href="/TRpackage/styleGuide/demo/css3_btn/switch/default.html?dep1=10&dep2=0"	>switch</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/css3_btn/material/default.html?dep1=10&dep2=1"	>material</a></li>
 				<li><a href="/TRpackage/styleGuide/demo/css3_btn/underline/default.html?dep1=10&dep2=2"	>underline</a></li>
+				<li><a href="/TRpackage/styleGuide/demo/css3_btn/lightline/default.html?dep1=10&dep2=3"	>lightline</a></li>
 				
 			</ul>
 		</li>
